<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".databinding.ui.CheckUrlActivity">
   <data>
       <variable
           name="homeclick"
           type="com.test.databinding.ui.CheckUrlViewModel" />
   </data>
    <LinearLayout
        android:padding="@dimen/app_layout_padding"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!--header-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textColor="@color/white"
                android:background="@color/teal_700"
                android:onClick="@{homeclick.btnExecute}"
                android:text="@string/btn_execute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize12"/>
            <TextView
                android:textStyle="bold"
                android:typeface="normal"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize12"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="WebCheck"
                android:layout_weight="1" />
            <Button
                android:textColor="@color/white"
                android:background="@color/black"
                android:id="@+id/buttonSetting"
                android:text="@string/btn_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize12"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="@dimen/textSize4"
            android:background="@color/black_fifty"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textSize1"/>
        <TextView
            android:layout_marginTop="@dimen/textSize4"
            android:textStyle="bold"
            android:typeface="normal"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize14"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={homeclick.timeFrquency}"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="@dimen/app_layout_padding"
            android:layout_marginBottom="@dimen/app_layout_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/listitem_url_email"
            android:id="@+id/recyclerViewUrlList"/>
        <!--footer -->
        <LinearLayout
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/btn_addurl"
                android:onClick="@{homeclick::btn_addurl}"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize12"
                android:layout_marginEnd="@dimen/app_layout_padding"/>

            <Button
                android:onClick="@{homeclick::buttonCloseApp}"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:textColor="@color/white"
                android:background="@color/black"
                android:text="@string/btn_closeapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize12"
                android:layout_marginStart="@dimen/app_layout_padding"/>

        </LinearLayout>

    </LinearLayout>
</layout>

