<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data/>
<LinearLayout
    android:background="@drawable/bg_square"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/small_margin"
    >

    <LinearLayout
        android:layout_margin="@dimen/small_margin"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--gone for now -->
        <LinearLayout
            android:visibility="gone"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:typeface="normal"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize11"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time"
                 />
            <TextView
                android:id="@+id/textViewTime"
                android:typeface="normal"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize11"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                 />

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="start"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:typeface="normal"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize11"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_last_status"
                 />
            <TextView
                android:layout_marginTop="@dimen/textSize4"
                android:id="@+id/textViewStatus"
                android:typeface="normal"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize11"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Not send"
               />
        </LinearLayout>
       <LinearLayout
           android:layout_weight="1"
           android:orientation="vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
           <TextView
               android:textStyle="bold"
               android:typeface="normal"
               android:textColor="@color/white"
               android:textSize="@dimen/textSize11"
               android:gravity="center"
               android:layout_gravity="center"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/str_send_email"
               />
           <androidx.appcompat.widget.SwitchCompat
               android:layout_gravity="center"
               android:id="@+id/switchToSend"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>

       </LinearLayout>


        <ImageView
            android:visibility="visible"
            android:id="@+id/imageRemove"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_width="25dp"
            android:layout_height="25dp"/>




    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:paddingBottom="@dimen/small_margin"
        android:layout_marginEnd="@dimen/app_layout_padding"
        android:layout_marginStart="@dimen/app_layout_padding"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textColorHint="@color/hint_gray"
            android:hint="@string/hint_url"
            android:textColor="@color/black"
            android:ems="10"
            android:ellipsize="end"
            android:background="@color/white"
            android:id="@+id/editTextUrl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:padding="@dimen/textSize4"
            android:inputType="text"
            />
        <EditText
            android:layout_marginTop="@dimen/small_margin"
            android:textColorHint="@color/hint_gray"
            android:hint="@string/hint_email"
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:ellipsize="end"
            android:background="@color/white"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:padding="@dimen/textSize4"/>
    </LinearLayout>

</LinearLayout>
</layout>